[project]
name = "amazing-planning-generator"
version = "0.1.0"
description = "Generate an amazing resource planning for one week."
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "click>=8.3.1",
    "gspread>=6.2.1",
    "gspread-formatting>=1.2.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
]
